fix span alignment

--- a/src/plugins/cloud-foundry/view/applications/list/app-sort/app-sort.scss
+++ b/src/plugins/cloud-foundry/view/applications/list/app-sort/app-sort.scss
@@ -28,6 +28,7 @@
     padding-bottom: $hpe-unit-space;
 
     span {
+      padding-top: 8px;
       font-weight: $hpe-font-weight-semibold;
     }
 
